--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
         "SpamX",
         "RiZoeLX"
       ],   
-  "repository": "https://github.com/RiZoeLX/SpamX",
+  "repository": "https://github.com/dilop121/Banalluserbot",
   "website": "https://github.com/RiZoeLX",
   "success_url": "https://t.me/RiZoeLX",
   "env": {
